# watchit

./: .travis.yml  LICENSE  README.markdown  watchit.cabal
bench/: Bench.hs
src/: Main.hs  WatchIt.hs
src/WatchIt/: Options.hs  Types.hs
test/: Test.hs
