Name:                watchit
Version:             0.1.0.0
Synopsis:
Description:
License:             BSD3
License-File:        LICENSE
Author:              Paulo Tanimoto
Maintainer:          ptanimoto@gmail.com
Category:
Build-Type:          Simple
Cabal-version:       >= 1.10


-------------------------------------------------------------------------------
Source-Repository head
  Type:              git
  Location:          https://github.com/tanimoto/watchit


-------------------------------------------------------------------------------
Executable watchit
  Hs-Source-Dirs:
    src

  Main-is:
    Main.hs

  Other-Modules:

  Build-Depends:
      base                           >=      4.0      && <      5.0
    -- , transformers                   >=      0.3      && <      1.0
    -- , lens                           >=      4.0      && <      5.0
    -- , errors                         >=      1.4      && <      2.0
    -- , data-default                   >=      0.5      && <      1.0
    -- , deepseq                        >=      1.3      && <      2.0
    -- , containers                     >=      0.4      && <      1.0
    -- , unordered-containers           >=      0.2      && <      1.0
    -- , bytestring                     >=      0.10     && <      1.0
    -- , text                           >=      1.1      && <      2.0
    -- , vector                         >=      0.10     && <      1.0
    -- , conduit                        >=      1.0      && <      2.0
    -- , pipes                          >=      4.1      && <      5.0
    , process
    , optparse-applicative           >=      0.11     && <      1.0
    , streaming-commons              >=      0.1      && <      1.0
    , system-filepath                >=      0.3      && <      1.0
    , system-fileio                  >=      0.3      && <      1.0
    , fsnotify                       >=      0.1      && <      1.0

  Ghc-Options:
    -Wall
    -O2
    -threaded
    -with-rtsopts=-N
    -rtsopts

  Default-Language: Haskell2010


-------------------------------------------------------------------------------
Test-Suite Tests
  Hs-Source-Dirs:
    test

  Main-is:
    Test.hs

  Type:
    exitcode-stdio-1.0

  Build-Depends:
      watchit
    , base                           >=      4.0      && <      5.0
    , Cabal
    , HUnit
    , QuickCheck
    , smallcheck
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , tasty-smallcheck

  Ghc-Options:
    -Wall

  Default-Language:    Haskell2010


-------------------------------------------------------------------------------
Benchmark Bench
  Hs-Source-Dirs:
    bench

  Main-is:
    Bench.hs

  Type:
    exitcode-stdio-1.0

  Build-Depends:
      watchit
    , base                           >=      4.0      && <      5.0
    , deepseq                        >=      1.3      && <      2.0
    , criterion

  Ghc-Options:
    -Wall
    -O2
    -threaded
    -with-rtsopts=-N
    -rtsopts

  Default-Language:    Haskell2010
