Name:                watchit
Version:             0.1.0.0
Synopsis:            File change watching utility
Description:         Watch a directory and run a command whenever a file changes.
License:             BSD3
License-File:        LICENSE
Author:              Paulo Tanimoto
Maintainer:          ptanimoto@gmail.com
Category:            Development
Build-Type:          Simple
Cabal-version:       >= 1.10


-------------------------------------------------------------------------------
Source-Repository head
  Type:              git
  Location:          https://github.com/tanimoto/watchit


-------------------------------------------------------------------------------
Library
  Hs-Source-Dirs:
    src

  Exposed-Modules:
    WatchIt
    WatchIt.Options
    WatchIt.Types

  Build-Depends:
      base                           >=      4.0      && <      5.0
    , fsnotify                       >=      0.1      && <      1.0
    , optparse-applicative           >=      0.11     && <      1.0
    , process                        >=      1.1      && <      2.0
    , resource-pool                  >=      0.2      && <      1.0
    , streaming-commons              >=      0.1      && <      1.0
    , system-filepath                >=      0.3      && <      1.0
    , text                           >=      1.1      && <      2.0

  Ghc-Options:
    -Wall

  Default-Language: Haskell2010


-------------------------------------------------------------------------------
Executable watchit
  Hs-Source-Dirs:
    src

  Main-is:
    Main.hs

  Build-Depends:
      base                           >=      4.0      && <      5.0
    , fsnotify                       >=      0.1      && <      1.0
    , optparse-applicative           >=      0.11     && <      1.0
    , process                        >=      1.1      && <      2.0
    , resource-pool                  >=      0.2      && <      1.0
    , streaming-commons              >=      0.1      && <      1.0
    , system-filepath                >=      0.3      && <      1.0
    , text                           >=      1.1      && <      2.0

  Ghc-Options:
    -Wall
    -O2
    -threaded
    -with-rtsopts=-N
    -rtsopts

  Default-Language: Haskell2010


-------------------------------------------------------------------------------
Test-Suite Tests
  Hs-Source-Dirs:
    test

  Main-is:
    Test.hs

  Type:
    exitcode-stdio-1.0

  Build-Depends:
      watchit
    , base                           >=      4.0      && <      5.0
    , bytestring
    , async                          >=      2.0      && <      3.0
    , system-fileio                  >=      0.3      && <      1.0
    , system-filepath                >=      0.3      && <      1.0
    , Cabal
    , HUnit
    , QuickCheck
    , smallcheck
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , tasty-smallcheck

  Ghc-Options:
    -Wall

  Default-Language:    Haskell2010
